# GEO1004-hw3

./: .gitignore  README.md
_data/: readme.txt
cpp/: readme.txt
cpp/tree-RANSAC/: CMakeLists.txt
cpp/tree-RANSAC/data/: params.json
cpp/tree-RANSAC/src/: CMakeLists.txt  TreeDetector.cpp  TreeDetector.h  main.cpp
cpp/tree-RANSAC/src/Viewer/: Viewer.cpp
fme/: README.md  hw03_FME_workbench.fmw
gh/: process_TIN.gh  process_TIN.py  process_buildings_and_TIN.gh  process_trees.gh  process_trees.py  test_geojson_footprints.gh
gh/etc/: ghcomp_read_GeoJSON.py  process_buildings.gh  test_geojson_footprints.gh
python/: buildingtriangulation.py  buildingtriangulation_solid.py  previous.py  readme.txt  tin2json.py
qgis/: readme.txt
